# dC7UotodLAf7ZYzf

./: README.md
.devcontainer/: devcontainer.json
starter_files/: main.cpp  task.cpp  tests.cpp
work_2/part_1/task_1/: main.cpp  task.cpp  tests.cpp
work_2/part_1/task_2/: build.sh  main.cpp  task.cpp  tests.cpp
work_2/part_1/task_3/: main.cpp  task.cpp  tests.cpp
work_2/part_1/task_4/: main.cpp  task.cpp  tests.cpp
work_2/part_2/task_1/: main.cpp  task.cpp  tests.cpp
work_2/part_2/task_2_3/: main.cpp  task.cpp  tests.cpp
work_2/part_2/task_4/: main.cpp  task.cpp  tests.cpp
work_3/part_1/task_1/: CMakeLists.txt  main.cpp  task.cpp  tests.cpp
work_3/part_2/task_1/: CMakeLists.txt  main  main.cpp  task.cpp  tests.cpp
work_3/part_2/task_2/: CMakeLists.txt  func_1.cpp  func_2.cpp  func_3.cpp  helpers.cpp  main.cpp  task.cpp  tests.sh
work_3/part_2/task_2/include/: commons.h  func_1.h  func_2.h  func_3.h  helpers.h
work_3/part_2/task_2/tests/: test_calculate_function.cpp  test_func_1_2_3.cpp
work_4/task_1/: main.cpp  task.cpp  tests.cpp
work_4/task_2/: main.cpp  task.cpp  tests.cpp
work_5/task_1/: main.cpp  task.cpp  tests.cpp
work_5/task_2/: main.cpp  task.cpp  tests.cpp
work_6/task_1/: CMakeLists.txt  func_1.cpp  func_2.cpp  func_3.cpp  main.cpp  task.cpp  tests.sh
work_6/task_1/include/: commons.h  func_1.h  func_2.h  func_3.h
work_6/task_1/tests/: test_calculate.cpp  test_func_1_2_3.cpp
work_6/task_1/tests/mocks/: func_1.cpp  func_2.cpp  func_3.cpp
work_6/task_2/: CMakeLists.txt  main.cpp  task.cpp  tests.cpp  tests.sh
(+3 files in other folders)
